bk_ida/gccida/c3/sge_plus_constant
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/sge_plus_constant/src/loop.c:7291:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v8; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/sge_plus_constant/src/loop.c:7294:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v11; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/sge_plus_constant/src/loop.c:7301:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v6 = (  struct rtx_def *)x[1]; 
                         ^~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/sge_plus_constant/src/loop.c:7316:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v13 = (  struct rtx_def *)x[1]; 
                          ^~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/sge_plus_constant/src/loop.c:7332:32: error: use of undeclared identifier 'machine_mode'
return gen_rtx_fmt_ee( PLUS, ( machine_mode)BYTE2( v4), x, c); 
                               ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/sge_plus_constant/src/obj/loop.o] Error 1
